SERVER-23887 OP_COMMAND parser should validate that command names match